--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@
         background: grey;
         width: 100%;
         text-align: center;
-        position: absolute;
+        position: fixed;
         bottom: 0;
     }
 </style>
