--- a/menu.html
+++ b/menu.html
@@ -1,10 +1,6 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-<style>
-
-</style>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-success">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.php">BRASIL TURISTA</a>
@@ -30,7 +26,7 @@
             <li><a class="dropdown-item" href="usuario.php">Usuario</a></li>
             <li><a class="dropdown-item" href="cidade.php">Cidade</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="perfil.php">Perfil</a></li>
           </ul>
         </li>
       </ul>
